<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white_18dp"
        android:title="@string/Home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_menu"
        android:title="@string/Categories" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_bookmark_24dp"
        android:title="@string/Favoris" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/Notification" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/Account" />




</menu>
