<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_empty_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NO_RESULT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/no_feed_yet"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@color/grey_60" />

            <TextView
                android:id="@+id/brief"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/try_a_refresh_the_page"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_40" />


            <Button
                android:id="@+id/btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:background="@drawable/btn_rounded"
                android:text="@string/reload"
                android:textColor="@android:color/white" />


        </LinearLayout>


        <ImageView
            android:id="@+id/bg_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_weight="2"
            android:gravity="center"
            android:src="@drawable/bg_no_item_cactus" />

    </LinearLayout>


</LinearLayout>